# TurboMerger

./: .eslintrc.cjs  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  install.bat  launch_gui.bat  launch_gui.vbs  package-lock.json  package.json  pyproject.toml  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml  security.yml
build_scripts/: build_exe.bat  build_standalone.bat  setup.iss
config/: defaults.json
docs/: MACOS.md  RELEASING.md
scripts/: build_msi.ps1  check-version.mjs  macos-check.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: extensions.json  secrets.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  tokens.rs
src-tauri/src/applyback/: mod.rs
src-tauri/src/compress/: mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/merger/: mod.rs
src-tauri/src/remote/: mod.rs
src-tauri/src/repomap/: mod.rs
src-tauri/src/scanner/: mod.rs
src-tauri/src/security/: mod.rs
src-tauri/tests/: applyback.rs  integration.rs
src/components/: ApplyPanel.tsx  CuratePanel.tsx
src/styles/: global.css
src/turbomerger/: __init__.py  __main__.py  core.py  detector.py  engine.py  gui.py  pdf_reader.py  sentinel.py
tests/: __init__.py  conftest.py  test_core.py  test_detector.py  test_engine.py  test_gitignore.py  test_sentinel.py
