[package]
name = "turbomerger"
version = "7.2.0"
description = "One-click codebase merger"
authors = ["TurboMerger Contributors"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"

# Parallelism
rayon = "1.10"

# File system — gitignore-aware walker (ripgrep's)
ignore = "0.4"
dirs = "5"
open = "5"

# Utilities
phf = { version = "0.11", features = ["macros"] }
chrono = "0.4"

# Security - path validation & secret detection
unicode-normalization = "0.1"
regex = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
overflow-checks = true  # SECURITY: Prevent integer overflow in release builds
