[package]
name = "turbomerger"
version = "7.6.0"
description = "One-click codebase merger"
authors = ["TurboMerger Contributors"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"

# Parallelism
rayon = "1.10"

# File system — gitignore-aware walker (ripgrep's)
ignore = "0.4"
dirs = "5"
open = "5"

# Utilities
phf = { version = "0.13", features = ["macros"] }
chrono = "0.4"

# Token counting (o200k_base / cl100k_base)
tiktoken-rs = "0.12"

# Security - path validation & secret detection
unicode-normalization = "0.1"
regex = "1"
tree-sitter = "0.26.10"
tree-sitter-rust = "0.24.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
encoding_rs = "0.8.35"
chardetng = "1.0.0"
# Remote repo packing (T2-8): shallow clones land in a self-cleaning tempdir
tempfile = "3"
# Apply-back diffs (T3-3)
similar = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
overflow-checks = true  # SECURITY: Prevent integer overflow in release builds
